@@ -2,6 +2,7 @@ import java.util.*;
 import java.util.function.BiPredicate;
 import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 class AStarPathingStrategy
@@ -34,7 +35,7 @@ class AStarPathingStrategy
             List<Point> validNeighbors = potentialNeighbors
                     .apply(curr.getPoint())
                     .filter(canPassThrough)
-                    .filter(c -> !closedList.contains(c)).toList();
+                    .filter(c -> !closedList.contains(c)).collect(Collectors.toList());
             //for each valid node
             for (Point n : validNeighbors) {
                 // new node is neighbor of the current node
